Fix
-fixed mobile version.
-fixed some bugs (text not showing on hover).
-Header's background color changed to grey

--- a/Brand name/src/style.css
+++ b/Brand name/src/style.css
@@ -15,6 +15,7 @@
 * {
     margin: 0px;
     padding: 0;
+    box-sizing: content-box;
     font-family: 'Varela Round', sans-serif;
     text-decoration: none;
     list-style-type: none;
@@ -118,7 +119,7 @@
 #container .tiny {
     color: #eef0f2;
     height: 48px;
-    background-color: #a2999e;
+    background-color: #353b3c;
 }
 
 #transform-wrapper {
@@ -142,7 +143,7 @@
     align-items: center;
     flex-direction: column;
     min-height: 100vh;
-    background-image: radial-gradient(rgba(0,0,0,.4),rgba(0,0,0,.1),rgba(0,0,0,.8)),url("img/vegetable-plate.jpg");
+    background-image: radial-gradient(rgba(0,0,0,.2),rgba(0,0,0,.4),rgba(0,0,0,.5)),url("img/blubry-cake.jpg");
     background-position: center;
     background-size: cover;
     text-align: center;
@@ -235,6 +236,7 @@
 .co-in-l h2, .co-in-l p, .co-in-l a {
     text-align: center;
     margin: 24px 8px;
+    color: #353b3c!important;
 }
 
 .co-in-l p {
@@ -255,7 +257,7 @@
 }
 
 .co-in-l a:hover {
-    color: #eef0f2;
+    color: #eef0f2!important;
     background-color: #353b3c
 }
 
@@ -567,7 +569,6 @@
     background-color: #eef0f2
 }
 
-
 .mob-rest-come {
     padding: 24px;
     background-color: #eef0f2;
@@ -576,7 +577,7 @@
 .mob-come-inner {
     display: flex;
     flex-direction: column;
-    height: 75vh;
+    min-height: 100vh;
     background-color: #c6c7c4;
 }
 
@@ -587,8 +588,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    height: 50%;
-    padding: 0 8px;
+    min-height: 50vh;
 }
 
 .mob-co-in-l p {
@@ -608,14 +608,16 @@
 }
 
 .mob-co-in-l h2, .mob-co-in-l p,.mob-co-in-l a {
-    margin: 10px 0;
+    margin: 6px 0;
 }
 
 .mob-co-in-r {
+    min-height: 50vh;
     height: 50%;
     background-image: url(img/guy-plate.jpg);
     background-position: center;
     background-size: cover;
+    margin: 0;
 }
 
 
